// --- JUNE LABEL DATABASE SCHEMA (FINAL) ---

Table users {
  id integer [primary key, increment]
  name varchar
  email varchar [unique, not null]
  phone varchar [null]
  password varchar [not null]
  role enum('admin', 'user') [default: 'user']
  email_verified_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table categories {
  id integer [primary key, increment]
  name varchar [not null]
  slug varchar [unique, not null]
  created_at timestamp
  updated_at timestamp
}

Table products {
  id integer [primary key, increment]
  category_id integer
  sku varchar [unique, not null]
  name varchar [not null]
  slug varchar [unique, not null]
  image varchar
  description text
  price decimal [not null]
  stock integer [default: 0]
  weight integer [note: "gram, buat hitung ongkir"]
  is_active boolean [default: true]
  deleted_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table carts {
  id integer [primary key, increment]
  identifier varchar [not null, note: "session_token atau user_id"]
  user_id integer [null]
  product_id integer
  quantity integer [default: 1]
  created_at timestamp
  updated_at timestamp

  indexes {
    (identifier, product_id) [unique]
  }
}

Table orders {
  id integer [primary key, increment]
  user_id integer [null]
  order_id varchar [unique, not null]

  // Pricing
  subtotal decimal [note: "Total harga produk"]
  shipping_cost decimal [default: 0]
  gross_amount decimal [note: "subtotal + shipping_cost"]

  // Payment
  snap_token varchar [null]
  transaction_id varchar [null]
  payment_method varchar [null]
  payment_status enum('pending', 'success', 'failed', 'expired') [default: 'pending']
  paid_at timestamp [null]

  // Order
  order_status enum('pending', 'processing', 'shipped', 'delivered', 'cancelled') [default: 'pending']

  // Shipping
  customer_name varchar [not null]
  customer_phone varchar [not null]
  shipping_address text [not null]
  notes text [null]

  created_at timestamp
  updated_at timestamp
}

Table order_items {
  id integer [primary key, increment]
  order_id integer
  product_id integer
  product_name varchar [note: "Snapshot nama produk"]
  quantity integer [not null]
  unit_price decimal [note: "Harga saat transaksi"]
  subtotal decimal [note: "quantity * unit_price"]
  created_at timestamp
}

// Relationships
Ref: products.category_id > categories.id [delete: set null]
Ref: carts.user_id > users.id [delete: cascade]
Ref: carts.product_id > products.id [delete: cascade]
Ref: orders.user_id > users.id [delete: set null]
Ref: order_items.order_id > orders.id [delete: cascade]

Ref: order_items.product_id > products.id [delete: restrict]
